k8s/express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-express
  namespace: worldcup
spec:
  type: ClusterIP
  selector:
    app: express
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
